- Update Lands integration for version 5 series. Thanks, Nimāri, for the bug report!
- Fixed issue with restart command where certain configurations may cause issues with other plugins. Thanks, Nimari, for the bug report!
- Added support for PlotSquared v6. Thanks, Leahcim_krob, for the suggestion!
- Fixed incorrect bounds checking for protection hooks. Thanks, Nimāri, for the bug report!

Alpha 0.1.8.32
- Fixed end rods not rotating in the Big Door type. Thanks, Achaius, for the bug report!
- Fixed lightning rods not being rotated in drawbridges and big doors.
- Fixed only being able to set invalid open directions for portcullises in the GUI. Thanks, themarwik and Pumamori, for the bug reports!

Alpha 0.1.8.31
- The auto-updater is now initialized before checking if the current server version is valid. Thanks, Eldoria, for the bug report!
- Removed the shadowtoggle command.
- Added some util methods to opener classes to make them a bit more useful for external plugins.
- Removed some unused stuff.
- Updated database to v8.
- Added protection hook for GriefDefender. Thanks, anon_fawkes, for the suggestion!
- Added alias for "/BDM": "/doors". This opens the doors GUI. This is much easier to remember for new users. Thanks, GodsDead, for the suggestion!
- Added config option to disable update checking messages to avoid "spamming" the log.
- Use variable min/max world height in anticipation of 1.18.

Alpha 0.1.8.30
- Add full support for Minecraft 1.17.
- Close all open BigDoors menus on plugin shutdown/restart.
- Fix restarting the plugin causing the GUI to break if different localization is loaded. Thanks, @themarwik, for the bug report!
- Updated XMaterial.
- Fixed jungle logs not rotating properly in east/south-aligned drawbridges. Thanks, @Nateboy, for the bug report and for helping fix it!
- Fix PlotSquared v4.4.495 support. All older versions of v4 aren't supported anymore. Thanks, @Arma, for the bug report!