@@ -1,19 +1,5 @@
 package nl.pim16aap2.bigDoors.moveBlocks;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.atomic.AtomicBoolean;
-
-import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.World;
-import org.bukkit.block.Block;
-import org.bukkit.block.BlockState;
-import org.bukkit.material.MaterialData;
-import org.bukkit.scheduler.BukkitRunnable;
-import org.bukkit.util.Vector;
-
 import nl.pim16aap2.bigDoors.BigDoors;
 import nl.pim16aap2.bigDoors.Door;
 import nl.pim16aap2.bigDoors.NMS.CustomCraftFallingBlock;
@@ -30,6 +16,19 @@ import nl.pim16aap2.bigDoors.util.DoorDirection;
 import nl.pim16aap2.bigDoors.util.MyBlockData;
 import nl.pim16aap2.bigDoors.util.RotateDirection;
 import nl.pim16aap2.bigDoors.util.Util;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.Material;
+import org.bukkit.World;
+import org.bukkit.block.Block;
+import org.bukkit.block.BlockState;
+import org.bukkit.material.MaterialData;
+import org.bukkit.scheduler.BukkitRunnable;
+import org.bukkit.util.Vector;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class CylindricalMover implements BlockMover
 {
@@ -113,7 +112,7 @@ public class CylindricalMover implements BlockMover
                     final Block vBlock = world.getBlockAt((int) xAxis, (int) yAxis, (int) zAxis);
                     final Material mat = vBlock.getType();
 
-                    if (!Util.isAirOrWater(mat) && Util.isAllowedBlock(mat))
+                    if (Util.isAllowedBlock(mat))
                     {
                         final byte matData = vBlock.getData();
                         final BlockState bs = vBlock.getState();
@@ -216,7 +215,7 @@ public class CylindricalMover implements BlockMover
         else
             putBlocks(false);
     }
-    
+
     @Override
     public synchronized void cancel(boolean onDisable)
     {
@@ -232,8 +231,8 @@ public class CylindricalMover implements BlockMover
     public synchronized void putBlocks(boolean onDisable)
     {
         if (blocksPlaced.getAndSet(true))
-            return;        
-        
+            return;
+
         for (MyBlockData savedBlock : savedBlocks)
         {
             /*
@@ -307,7 +306,7 @@ public class CylindricalMover implements BlockMover
     private void rotateEntities()
     {
         endCount = (int) (20.0f / tickRate * time);
-        
+
         animationRunnable = new BukkitRunnable()
         {
             final Location center = new Location(world, turningPoint.getBlockX() + 0.5, yMin, turningPoint.getBlockZ() + 0.5);
