@@ -7,6 +7,7 @@ Alpha 0.1.8.33
 - Fixed issue with restart command where certain configurations may cause issues with other plugins. Thanks, Nimari, for the bug report!
 - Added support for PlotSquared v6. Thanks, Leahcim_krob, for the suggestion!
 - Fixed incorrect bounds checking for protection hooks. Thanks, Nimāri, for the bug report!
+- Added destroyList config option to determine which types of blocks can be destroyed by a door toggle. Defaults to WATER, LAVA, and SNOW. Before, this was hardcoded to just WATER and LAVA. Thanks, Henriko Magnifico, for the bug report!
 
 Alpha 0.1.8.32
 - Fixed end rods not rotating in the Big Door type. Thanks, Achaius, for the bug report!
